Correct structure in html; Change style in #countries on mobile; Correct .createElement in js

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -37,6 +37,7 @@ body {
     margin: 0 auto;
     padding-top: 20px;
     padding-bottom: 20px;
+    font-size: 28px;
 }
 
 
@@ -57,5 +58,8 @@ body {
         width: 100%;
         padding: 10px;
         margin: auto;
+        font-size: 24px;
+        list-style-type: none;
+        padding: 15px;
     }
 }
